Implemented update fund API, OpenAPI, controller, serviceImpl.
